# carista-task

./: CMakeLists.txt  LICENSE  README.md  input.txt
src/: can_parser.cpp  can_parser.h  main.cpp  test.cpp
